2005-04-25 Glenn Randers-Pehrson <glennrp@glennrp.com>

	* coders/png.c: Initialize several variables to avoid new
	GCC 4.0.0 warnings.
	* coders/pnm.c: Defend against malicious "P7" files that try
	to set the colormap less than 256 bytes (bug fix from ImageMagick)

2005-04-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dpx.c (WriteDPXImage): Fill out source information
	header.
	* Magick++: Added image leveling methods for Magick++.

2005-04-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS: Update with latest news.
	* magick/blob.c (WriteBlob): Move BlobStream write support to a
	subroutine for easier maintenance.
	* coders/dpx.c (ReadDPXImage): Support retrieving all DPX
	attributes as image attributes.
	(WriteDPXImage): Buffer writes for better performance on some
	platforms.

2005-04-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dpx.c (WriteDPXImage): Re-write sample marshalling to be
	based on a series of tighter loops.  Results in a small
	performance increase.
	(ReadDPXImage): Re-write sample marshalling to be
	based on a series of tighter loops.  Results in a small
	performance increase.

2005-04-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/Xwindow.c (XDelay): Prefer use of select() over poll()
	since it is more portable.  MacOS-X has a poll() but it doesn't
	work right.

2005-04-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/magick_endian.h: Renamed from endian.h in order to avoid
	conflict with system headers.

2005-04-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/miff.c (WriteMIFFImage): Normalize image depth to 8/16/32.
	* coders/gray.c (WriteGRAYImage): Normalize image depth to 8/16/32.
	* coders/fits.c (WriteFITSImage): Normalize image depth to 8/16.
	* tests/Makefile.am: Extended read/write tests to include 10, 12,
	and 16-bit original test images.
	* coders/dpx.c (ReadDPXImage): If samples are log encoded, then
	set the image to CineonLogRGBColorspace.